--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -12,3 +12,14 @@ sql:
         emit_interface: true
         emit_exact_table_names: false
         emit_empty_slices: true
+        "overrides": [
+          {
+            "go_type": "github.com/shopspring/decimal.Decimal",
+            "db_type": "pg_catalog.numeric"
+          },
+          {
+            "go_type": "github.com/shopspring/decimal.Decimal",
+            "db_type": "pg_catalog.numeric",
+            "nullable": true
+          }
+        ]
