--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -18,7 +18,7 @@ sql:
             "db_type": "pg_catalog.numeric"
           },
           {
-            "go_type": "github.com/shopspring/decimal.Decimal",
+            "go_type": "github.com/shopspring/decimal.NullDecimal",
             "db_type": "pg_catalog.numeric",
             "nullable": true
           },
